--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "node-sass": "^4.13.1",
     "nprogress": "^0.2.0",
     "prettier": "^1.19.1",
-    "react": "^16.12.0",
+    "react": "^17.0.1",
+    "react-color": "^2.19.3",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
