--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@material-ui/core": "^4.9.1",
     "@material-ui/icons": "^4.9.1",
+    "@myetherwallet/mewconnect-web-client": "^2.1.16",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "@walletconnect/web3-provider": "^1.3.1",
     "bluebird": "^3.7.2",
     "bn.js": "^5.1.3",
     "dotenv": "^8.2.0",
