feat: lowercase app name

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "ZKPay",
-  "description": "ZKPay",
+  "name": "zkpay",
+  "description": "zkpay",
   "icons": [
     {
       "src": "favicon.ico",
