--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,7 @@
     "typescript": "^4.0.5",
     "unfetch": "^4.1.0",
     "web3modal": "^1.9.2",
-    "zksync": "^0.8.2"
+    "zksync-checkout": "^0.0.11"
   },
   "resolutions": {
     "react-dev-utils": "10.1.0"
