feat: ability to specify acceptable usd amount type

--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -1,13 +1,12 @@
 run: node_modules
 	@yarn start
 
-deploy:
+build:
 	@yarn build
-	@surge -d https://zk-links.surge.sh -p build
 
 node_modules:
 	@yarn
 
 .PHONY: \
 	run \
-	deploy
+	build
